# sparse-encoding-api

./: Dockerfile  Dockerfile.cuda11  README.md
app/: main.py  pyproject.toml
app/sparse_encoding_api/: services.py  views.py
app/tests/: test_server.py
